# awesome-llvm

./: .gitignore  Clang.md  README.md  clang.md  sanitizers.md
.github/workflows/: auto-assign.yml
Scripts/: llvm-ir.py  llvmcg.py  llvmopts.py
docs/: Infer.md  LibFuzzer.md  clang-cxxapi.md  clang-driver-options.md  clang-format.md  clang-tidy.md  clang-tools.md  faqs.md  gold-linker.md  opt.md  optimizations.md  whole-program-llvm.md  x86_64.md  xray.md
docs/sanitizers/: ASAN.md  MSAN.md  README.md  TSAN.md  UBSAN.md
docs/xref/: CMakeLists.txt  main.c  testnum.c  testnum.h
scripts/: aliases  cc_dumper.py  faqs.md  llvm-ir.py  llvm_ir.py  llvmcg.py  llvmopts.py  wrap_cdb.py
scripts/setup-llvm/: .gitignore  1-llvm-git.sh  1-llvm-mirror.sh  2-stp.sh  2-z3-x.sh  2-z3.sh  3-marple.sh  4-klee.sh  5-wllvm.sh  README.md  lav.sh  setup.rc  x-ln.sh
setup/: 1-llvm-git.sh  2-z3.sh  3-uclibc.sh  4-klee.sh  5-wllvm.sh  README.md  gllvm.sh  llvm.sh  setup.rc
setup/bak/: klee-uclibc.sh  klee.sh  z3.sh
snippets/: .gitignore  aliases  clang_driver.py  compiler_info.py  header_inclusion.py  llvm_ir.py  llvmcg.py  pyproject.toml  wrap_cdb.vim
snippets/cc/: .gitignore  .luarc.json  README.md  xmake.lua
snippets/cc/myclang/: main.cc  xmake.lua
snippets/py/: llvmcg.py  llvmopts.py
