[project]
version = "1.0"
name = "awesome-llvm"
dependencies = ["graphviz>=0.20"]

[project.optional-dependencies]
test = ["pytest>=6.2.5"]
######################### pyright ################################
# as language server, https://github.com/microsoft/pyright/blob/main/docs/settings.md
[tool.pyright]
include = ["."]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
# basic checking (ruff does not type check)
typeCheckingMode = "basic"

reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportUndefinedVariable = false

# https://github.com/microsoft/pyright/discussions/3929
[tool.python.analysis]
# diagnosticMode = "workspace"
diagnosticMode = "off"
diagnosticSeverityOverrides = "none"
autoImportCompletions = true
useLibraryCodeForTypes = false


######################### ruff ################################
# as diagnostic tool and formatter https://beta.ruff.rs/docs/rules/
[tool.ruff]
select = [
    # pycodestyle
    "E",
    "EXE",
    # pyflakes
    "F",
    "W",
    "Q",
    "UP",
    "I",
    "N",
    "COM812",
]
ignore = ["F403", "F405"]
# ignore = ["E501","E226","E302","E71", "E203","F403","F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = ["F401", "F841"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 30

# currently unused
[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
dmypy = true
